# invenio-azure-sso

./: .env.example  .gitignore  .invenio  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg  t.txt
assets/js/invenio_app_rdm/overridableRegistry/: mapping.js
assets/js/invenio_app_rdm/overridableRegistry/components/: CommunityHeaderOverride.js  index.js
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
site/: .gitkeep  setup.cfg
site/instance_test_2/: views.py  webpack.py
