
[metadata]
name = instance-test-2

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    instance_test_2_views = instance_test_2.views:create_blueprint
invenio_assets.webpack =
    instance_test_2_theme = instance_test_2.webpack:theme
